@@ -1,6 +1,6 @@
-MD5 0bdfe0842971c4df49c331f0859267c2 ChangeLog 2464
+MD5 37d313885a8711eb9d5cee7e7e455d4f ChangeLog 2558
 MD5 8a6cf4a4f609fa3a893e23b2c5a7ce7d psmisc-21.2-r1.ebuild 1224
-MD5 f8dcd6f84aae707596b8443feddb67fd psmisc-21.2-r2.ebuild 1334
+MD5 29b36dd8ec75f00199d857c14de872df psmisc-21.2-r2.ebuild 1331
 MD5 6103f4929ab117827385124493e78c77 files/digest-psmisc-21.2-r1 136
 MD5 6103f4929ab117827385124493e78c77 files/digest-psmisc-21.2-r2 136
 MD5 b3c372e1b1ef54a8798b8526a2aa92d1 files/psmisc-21.2-gcc33.patch 547
