@@ -1,11 +1,14 @@
 # ChangeLog for sys-apps/psmisc
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/psmisc/ChangeLog,v 1.17 2003/06/24 14:32:06 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/psmisc/ChangeLog,v 1.18 2003/07/06 14:51:16 gmsoft Exp $
 
   24 Jun 2003; Aron Griffis <agriffis@gentoo.org> psmisc-21.2-r2.ebuild:
   Mark stable on alpha
 
 *psmisc-21.2-r2 (19 May 2003)
+
+  06 Jul 2003; Guy Martin <gmsoft@gentoo.org> psmisc-21.2-r2.ebuild :
+  Marked stable on hppa.
 
   22 Jun 2003; Joshua Kinard <kumba@gentoo.org> psmisc-21.2-r2.ebuild:
   Changed ~sparc & ~mips to sparc & mips
